--- a/produtos.css
+++ b/produtos.css
@@ -14,3 +14,15 @@ nav a {
     font-size: 22px;
     text-decoration: none;
 }
+
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+.caixa {
+    position: relative;
+    width: 940px;
+    right: 0 auto;
+}
